Single post map icon not https if https is on unless uploaded via https - FIXED
Category map icon not https if https is on unless uploaded via https - FIXED
User ID column added in attachments table  - ADDED
Shortcodes [#username#] & [#user_login#] added in registration notification - FIXED
is_approved and caption columns added in attachments table  - ADDED

v1.4.9
Google Analytics extra error messages added to help users debug - ADDED
Google Analytics days of week now translatable - FIXED
Broken image link can break the image upload button when editing - FIXED
Added check to not run file system check function when doing ajax calls - CHANGED
Best of widget now supports multiple uses per page - FIXED
Filter login_redirect added for login after GD signup - ADDED
Google Analytics Countries now translatable - FIXED
Google maps home map loads categories on first load instead of via ajax after page load - CHANGED
Cyrillic characters not exporting correctly in import/export - FIXED
With WPML search results listings for all languages - FIXED
In registration send password to email note removed when user allowed choose own password - FIXED
Menu save triggering rebuilding of category count and review counts - FIXED
Added option to General>search to limit small individual words form being searched - ADDED
Genesis cat description appearing twice and title out of align if sort by present - FIXED
Google removed some JS files from their CDN which broke some Analytics, changed to cloudflare CDN - FIXED
Added function to ad featured image to details page header so facebook will use it on url share - ADDED
Fields is_featured, package_id & expire_date do not working for import/export - FIXED
Default theme compatibility settings not installed on first install only on upgrade - FIXED
Google analytics metric changed from ga:sessions to ga:pageviews - CHANGED
Social importer not showing imported images properly - FIXED