@@ -22,6 +22,7 @@ Category map icon not https if https is on unless uploaded via https - FIXED
 User ID column added in attachments table  - ADDED
 Shortcodes [#username#] & [#user_login#] added in registration notification - FIXED
 is_approved and caption columns added in attachments table  - ADDED
+Listing slider widget can now show more than one listing at a time - CHANGED
 
 v1.4.9
 Google Analytics extra error messages added to help users debug - ADDED
